apply plugin: 'idea'

configure(subprojects) { project ->
    apply plugin: 'java'
    apply plugin: 'checkstyle'


    group = "com.github.wenhao"
    version = '1.0.0'

    repositories {
        mavenCentral()
    }

    compileJava {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }

    dependencies {
        compile(
                "com.google.guava:guava:$guavaVersion",
                "com.google.inject:guice:$guiceVersion"
        )

        testCompile(
                "junit:junit:$junitVersion",
                "org.mockito:mockito-core:$mockitoVersion"
        )

        task sourcesJar(type: Jar) {
            from sourceSets.main.allSource
            classifier = 'sources'
        }

        task javadocJar(type: Jar, dependsOn: javadoc){
            classifier = 'javadoc'
            from javadoc.destinationDir
        }

        artifacts {
            archives jar
            archives sourcesJar
            archives javadocJar
        }

    }

    checkstyle {
        configFile = file('../config/checkstyle/checkstyle.xml')
    }

    checkstyleTest.exclude '**/*.*'

}

project("01-guess-number") { project ->
    description = "01-guess-number"
}

project("02-length") { project ->
    description = "02-length"
}

project("03-fizz-buzz-whizz") { project ->
    description = "03-fizz-buzz-whizz"
}

project("04-taxi") { project ->
    description = "04-taxi"
}

project("05-parking-lot") { project ->
    description = "04-parking-lot"
}

project("06-harry-potter") { project ->
    description = "05-harry-potter"
}

project("07-pos") { project ->
    description = "06-pos"
}

project("08-bank") { project ->
    description = "07-bank"

    dependencies {
        compile"joda-time:joda-time:2.8.1"
        testCompile 'org.assertj:assertj-core:3.7.0'
    }
}
